unpackaged/main/default/objects/BusinessAccount/fields/MOU_Level__c.field-meta.xml
<CustomField>
    <fullName>MOU_Level__c</fullName>
    <description>DWDECI-43. Indicates whether this Partner papers its MOU at the Corporate Level or Per Facility. Read by the Opportunity - On Create - Default MOU Requirement flow, and cascaded down to child Accounts by the Account - On Edit - Cascade MOU Level flow when set to Corporate Level.</description>
    <label>MOU Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Level</fullName>
            </value>
            <value>
                <fullName>Per Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>