unpackaged/main/default/objects/BusinessAccount/fields/Offboarding_Description__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Description__c</fullName>
    <description>DWDECI-44. Free-text detail captured when a Partner Account is marked Offboarded.</description>
    <label>Offboarding Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>