unpackaged/main/default/objects/BusinessAccount/fields/Partner_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Partner_Subtype__c</fullName>
    <label>Partner Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Profit</fullName>
            </value>
            <value>
                <fullName>Faith Based</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Medical Care</fullName>
            </value>
            <value>
                <fullName>Drug Testing</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Trade Schools</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facilities (SNFs)</fullName>
            </value>
            <value>
                <fullName>Doctor&#39;s Offices</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Hospitals</fullName>
            </value>
            <value>
                <fullName>Clinics</fullName>
            </value>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Mobile Labs</fullName>
            </value>
            <value>
                <fullName>Memory Care</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>