unpackaged/main/default/objects/BusinessAccount/fields/Sensitive_Inbound_Details__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Inbound_Details__c</fullName>
    <description>DWDECI-37. Manually-entered sensitive inbound information from this Partner. FLS = no access on all profiles by default (including System Administrator, per Metadata API behavior for new fields). Read/Edit only via the DWD_Sensitive_Partner_Data permission set, assigned to Support &amp; Intervention Services roles and Rachel Foster per the Security Model Workbook.</description>
    <label>Sensitive Inbound Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>